# mbemm

./: .gitignore  Makefile  Makefile.Irix  Makefile.Linux  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1  traces.2
emath/: Makefile.old
examples/: blok01.tst  materials.mtl
general/: Makefile  dynarray.c  emath_io.c  mesh.c  messages.c  trap.c  vectors.c
include/: dynarray.h  emath_io.h  mesh.h  messages.h  trap.h  vectors.h
interface/: Makefile  read_dat.c
src/: Makefile.am  Makefile.in
src/emath/: Makefile  Makefile.Irix  Makefile.Linux  contactc.c  do_contact.c  do_linear.c  emath.mak  emath.mdp  emath.ncb  fsol3d.c  gauss.c  ikbeneenscript  linearc.c  mcheck.c  mickey.c  parse.c  post.c  scale.c  singular.c  solve.c
src/emath/Debug/: emath.ilk  emath.pch  vc40.idb
src/general/: Makefile  Makefile.Irix  Makefile.Linux  cylgeom.c  elements.c  imatrices.c  m_io.c  matrices.c  matrix.c  matrix.old  memstat.c  points.c  restr.c  tril.c
src/include/: bcapp.h  contact.h  cylgeom.h  date_time.h  do_contact.h  do_linear.h  elements.h  fsol3d.h  gauss.h  globals.h  imatrices.h  linear.h  m_io.h  matrices.h  matrix.h  mcheck.h  memstat.h  message.h  parse.h  points.h  post.h  restr.h  scale.h  singular.h  solve.h  text.h  tril.h
