##### #      ###   #### #####  ###  #   #  ###  ##### #   #
#     #     #   # #       #   #   # ## ## #   #   #   #   #
###   #     #####  ###    #   #   # # # # #####   #   #####
#     #     #   #     #   #   #   # #   # #   #   #   #   #
##### ##### #   # ####    #    ###  #   # #   #   #   #   #

# Makefile for the Elastomath project
#
# Elastomath (c) 1995 by Mark S. Peerdeman and Douwe Overdijk

AUTOMAKE_OPTIONS = foreign
SUBDIRS = src examples
